deploy/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
    networking.gke.io/managed-certificates: "api-certificate"
    kubernetes.io/ingress.global-static-ip-name: "api-production-ip"
  name: api-ingress
spec:
  rules:
    - host: api.bootifulpodcast.fm
      http:
        paths:
          - backend:
              serviceName: api
              servicePort: 80
